--- a/base.html
+++ b/base.html
@@ -18,9 +18,9 @@
         
               <p>Cantidad:
                 <span class="cantidad">0</span>
-                <button onclick="Suma()"
+                <button id="suma" onclick="Suma()"
                 >+</button>
-                <button onclick="Resta()"
+                <button id="resta" onclick="Resta()"
                 >-</button>
               </p>
             </div>
@@ -28,8 +28,8 @@
         </div>
     </section>
 
-    <div class="total-section">
-        <p>Total a pagar: $<span class="valor-total"></span> </p>
+    <div>
+        <p class="total">Total a pagar: $<span class="valor-total"></span> </p>
     </div>
 
     <script src="./assets/js/index.js">
