Agregando funcionalidad para el valor total

--- a/base.html
+++ b/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/icono-pg.png">
     <title>Desafío 1 - JavaScript</title>
     <link rel="stylesheet" href="./assets/css/estilos.css"> 
 </head>
@@ -28,8 +29,8 @@
         </div>
     </section>
 
-    <div>
-        <p class="total">Total a pagar: $<span class="valor-total"></span> </p>
+    <div class="total-section">
+        <p>Total a pagar: $<span class="valor-total"></span> </p>
     </div>
 
     <script src="./assets/js/index.js">
